# hw_web_mod11_9

./: index.html  main_quote.py  pyproject.toml  quotes.json
