[tool.poetry]
name = "hw-web-mod11-9"
version = "0.1.0"
description = ""
authors = ["Nataliya2401 <sabotab2000@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_web_mod11_9"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
